--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -43,7 +43,8 @@
     <% end %>
   </tbody>
 </table>
-
+<% if can? :new, @project %> 
 <%= link_to t('.new', :default => t("helpers.links.new")),
             new_project_path,
             :class => 'btn btn-primary' %>
+ <%end%>
