user duplication removed

--- a/app/views/projects/assign.html.erb
+++ b/app/views/projects/assign.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= user.id %></td>
         <td><%= user.project_id %></td>
-        <td><%= link_to user.name, assign_to_project_path(user) %></td>
+        <td><%= link_to user.name, users_assign_to_path(user) %></td>
         <td><%= user.user_type %></td>
         <td><%= user.email %></td>
        
